# hive

./: .env.example  .gitignore  Cargo.toml  README.md  SUBMISSION.md
agent/: Cargo.toml
agent/src/: executor.rs  main.rs  poller.rs  stellar.rs  x402.rs
agent/src/tools/: data.rs  search.rs
contracts/hive-escrow/: Cargo.toml
contracts/hive-escrow/src/: escrow.rs  events.rs  lib.rs  policy.rs  registry.rs  reputation.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Landing.jsx  index.css  main.jsx
frontend/src/Pages/: Landing.jsx
frontend/src/components/: AgentLog.jsx  EscrowStatus.jsx  FeatureHighlights.jsx  Header.jsx  HowItWorks.jsx  Reputation.jsx  TaskForm.jsx  TaskResult.jsx  TxTracker.jsx
frontend/src/hooks/: useAgentLog.js  useTasks.js  useWallet.js
tools/: Cargo.toml  package-lock.json  package.json
tools/src/: main.rs
x402-server/: package-lock.json  package.json  server.js
