[package]
name = "hive-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive-agent"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
axum        = "0.7"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
dotenv      = "0.15"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2        = "0.10"
hex         = "0.4"
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1",   features = ["v4"] }
stellar-strkey = "0.0.8"
