[package]
name = "hive-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive-tools"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
axum        = "0.7"
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
dotenv      = "0.15"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http  = { version = "0.5",  features = ["cors"] }
chrono      = { version = "0.4",  features = ["serde"] }
uuid        = { version = "1",    features = ["v4"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow      = "1"
